--- a/project.config
+++ b/project.config
@@ -1,10 +1,9 @@
 [access]
-	inheritFrom = scm/acls/domain_system
+	inheritFrom = scm/acls/domain_network_and_connectivity/uncategorized
 [receive]
 	requireSignedOffBy = true
 [access "refs/*"]
 	owner = group Administrators
 [project]
-	state = active
 	description = "Domain: System;"\n\
 
